syntax = "proto3";

package rental.v1;
option go_package = "coolcar/auth/api/gen/v1;rentalpb";

message CreateTripReq {
  string start = 1;
}

message  CreateTripRsp{
}

service TripService {
  rpc CreateTrip(CreateTripReq) returns (CreateTripRsp);
}